@@ -1,6 +1,7 @@
 2011-02-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* liststore.py: Added delays for accessing API.
+	* liststore.py, plugins/base/base.py: Added delays for accessing
+	  API.
 
 2011-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
